--- a/eShopSolution.Application/eShopSolution.Application.csproj
+++ b/eShopSolution.Application/eShopSolution.Application.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eShopSolution.data\eShopSolution.data.csproj" />
+    <ProjectReference Include="..\eShopSolution.Utilities\eShopSolution.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
