--- a/eShopSolution.BackendAPI/appsettings.Development.json
+++ b/eShopSolution.BackendAPI/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-      "eShopSolutionDb": "Server=phuongphi.database.windows.net;Database=eShopSolution;User Id=phuongphi;Password=Anh670197;"
-    },
+  "ConnectionStrings": {
+    "eShopSolutionDb": "Server=.;Database=eShopSolution;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
