--- a/eShopSolution.data/appsettings.json
+++ b/eShopSolution.data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "eShopSolutionDb": "Server=phuongphi.database.windows.net;Database=eShopSolution;User Id=phuongphi;Password=Anh670197;"
+    "eShopSolutionDb": "Server=.;Database=eShopSolution;Trusted_Connection=True;"
   }
 }
